--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,16 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
   color: #333;
+  margin: 24px;
 }
 
 h1 {
+  font-size: 42px;
+  color: #36502c;
+}
+
+h2 {
+  font-size: 36px;
   color: #36502c;
 }
 
@@ -17,15 +24,50 @@ img {
   border-radius: 8px;
 }
 
-/* Styling for button */
+/* Styling for the button */
 button {
   width: 300px;
-  padding: 24px;
+  padding: 16px;
+  font-weight: 800;
+  text-transform: uppercase;
+  color: #36502c;
+  border-width: 3px;
   border-color: #36502c;
-  border-radius: 6px;
+  border-radius: 50px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.Places {
-  padding: 24px;
+/* Container for the header (image + text) */
+.header {
+  margin-bottom: 20px;
+}
+
+/*Styling for the image inside the header*/
+.headerImage {
+  /*width: 100%;
+  height: 500px;*/
+  /*background-image: ;*/
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 0px;
+  /* Beskär och fyller ut behållaren */
+}
+
+.places {}
+
+/* Styling for the content layout */
+.box {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  display: flex;
   align-items: center;
+}
+
+.box p {
+  width: 600px;
+}
+
+.box img {
+  padding-right: 32px;
 }
